src/components/output.css
.output {
	box-sizing: border-box;
	width: 100%;
	height: 100%;
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 1em;
}

.output>.js {
	background: black;
	color: white;
	flex: auto;
	resize: none;
	width:100%;
	padding: 0;
	font-family: inherit;
	text-transform: inherit;
	white-space: normal;
	word-break: break-all;
	overflow: auto;
	border: none;
	cursor: copy;
	text-overflow: ellipsis;
	user-select: text;
}

.output>.js:focus {
	outline: none;
}

.output>.copy-notif {
	flex: none;
	background: black;
	color: white;
	text-align: center;
	grid-column-end: span 2;
	width: 100%;
	height: 2em;
}

